# doosan_robot

./: README.md
dsr_control/launch/: dsr_moveit.launch
dsr_description/meshes/table/: table.stl
dsr_description/xacro/: a0912.urdf.xacro  a0912_140gripper.urdf.xacro
dsr_example/py/scripts/: environment.py
dsr_launcher/launch/: dsr_moveit.launch
dsr_launcher/scripts/: a0912_plan.py  control.py  control_planning_scene.py  environment.py  feature.py  fk.py  generate_psi_set.py  pick_n_place.py  pick_n_place_2.py  tutorial.py
dsr_launcher/scripts/preference_based_learning/: algos.py  models.py  real_experiment.py  (+2 more)
moveit_config_a0912/: CMakeLists.txt
moveit_config_a0912/_scripts/: a0912_moveit_tutorial.py  control.py  environment.py  pick_n_place.py  robot_model_and_robot_state_tutorial.cpp
moveit_config_a0912/config/: laptop.stl  visualhuman.stl
moveit_config_a0912_gripper/: .setup_assistant  CMakeLists.txt  package.xml
moveit_config_a0912_gripper/config/: controllers.yaml  dsr.srdf  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml
moveit_config_a0912_gripper/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  dsr_moveit_controller_manager.launch.xml  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
(+212 files in other folders)
